# pj-action-edit-system

action-edit-system-game/: Cargo.toml  LICENSE.MIT  rustfmt.toml
action-edit-system-game/old/src/: main.rs
action-edit-system-game/old/src/renderer/: mod.rs
action-edit-system-game/old/src/renderer/render2d/: square.wgsl
action-edit-system-game/src/: gfx.rs  main.rs
action-edit-system-game/src/app_sys/: gfx.rs  mod.rs
action-edit-system-game/src/app_sys/gfx/: rdr_egui.rs  render_chain.rs
action-edit-system-game/src/app_sys/gfx/rdr_2d/: camera.rs  mod.rs
action-edit-system-game/src/app_sys/gfx/rdr_2d/square/: mod.rs
action-edit-system-game/src/app_sys/gfx/rdr_2d/tile/: mod.rs
action-edit-system-game/src/app_sys/gfx/util/: mod.rs
action-edit-system-game/src/graphics/: 2d_main.wgsl  instance.rs  mod.rs
action-edit-system-game/src/renderer/: game.rs  mod.rs
action-edit-system-game/src/renderer/render2d/: mod.rs  square.rs  square.wgsl
