[package]
name = "action-edit-system-game"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[profile.dev]
opt-level = 1
lto = false

[dependencies.wgpu]
version = "23"

[dependencies.winit]
version = "0.30"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies]
pollster = "0.4"
toml = "0.8"
serde_json = "1"
rmp-serde = "1"
csv = "1"
ouroboros = "0.18"