[package]
name = "action-edit-system-game"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[profile.dev]
opt-level = 1
lto = false

[dependencies.nalgebra]
version = "0.33"

[dependencies.wgpu]
version = "23"

[dependencies.winit]
version = "0.30"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.mlua]
version = "0.10"
features = ["luajit", "vendored", "macros", "userdata-wrappers", "async", "send", "error-send", "serialize"]

[dependencies.wasmtime]
version = "28"

[dependencies.image]
version = "0.25"
features = ["png", "jpeg", "webp"]

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies]
log = "0.4"
env_logger = "0.11"
hashbrown = "0.15"
parking_lot = "0.12"
pollster = "0.4"
toml = "0.8"
serde_json = "1"
rmp-serde = "1"
csv = "1"
egui = "0.30"
egui-winit = "0.30"
egui-wgpu = { version = "0.30", features = ["winit"] }
wgpu_glyph = "0.23"
crossbeam = "0.8"